--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         // Asking the browser if it supports service worker
         if ('serviceWorker' in navigator) {
             console.log("Serviceworker is available")
-            navigator.serviceWorker.register("/insectDownloadable/serviceworker.js");
+            navigator.serviceWorker.register("/
+insectsDownloadable/serviceworker.js");
         } else {
             console.log("Serviceworker is NOT available")
         }
