--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         // Asking the browser if it supports service worker
         if ('serviceWorker' in navigator) {
             console.log("Serviceworker is available")
-            navigator.serviceWorker.register("/
-insectsDownloadable/serviceworker.js");
+            navigator.serviceWorker.register("/insectsDownloadable/serviceworker.js");
         } else {
             console.log("Serviceworker is NOT available")
         }
